Add tests for combined btd+eve wt vs het or hom

--- a/1-analyses/mitotic-expansion/md_expansion.Rmd
+++ b/1-analyses/mitotic-expansion/md_expansion.Rmd
@@ -467,23 +467,71 @@ for (stock in unique(mdlong$stock)) {
     
     for (value in c("gb_pct", "time")) {
       
+      # Get values to be compared
+      wt = mdlong[(mdlong$status == status & mdlong$stock == "wt" & mdlong$zygosity == "wildtype"), value]
       het = mdlong[(mdlong$status == status & mdlong$stock == stock & mdlong$zygosity == "heterozygote"), value]
       hom = mdlong[(mdlong$status == status & mdlong$stock == stock & mdlong$zygosity == "homozygote"), value]
       
+      # Heterozygotes vs homozygotes
+      contrast = "het vs hom"
       test = wilcox.test(het, hom, paired = FALSE)
       pvalue = test$p.value
       statistic = test$statistic
       delta = mean(het) - mean(hom)
       
       test_row = c(
-        contrast = "het vs hom",
+        contrast = contrast,
         stock = stock,
         zygosity = "-",
         status = status,
         value = value,
         delta = sprintf("%.1f", delta),
         significant = pvalue < 0.05,
-        pvalue = sprintf("%.6f", pvalue),
+        pvalue = sprintf("%.9f", pvalue),
+        statistic = sprintf("%s=%s", names(statistic), statistic),
+        paired = FALSE
+      )
+      
+      tests <- rbind(tests, as.data.frame(t(test_row)))
+      
+      # Wildtype vs heterozygotes
+      contrast = "wt vs het"
+      test = wilcox.test(wt, het, paired = FALSE)
+      pvalue = test$p.value
+      statistic = test$statistic
+      delta = mean(wt) - mean(het)
+      
+      test_row = c(
+        contrast = contrast,
+        stock = stock,
+        zygosity = "-",
+        status = status,
+        value = value,
+        delta = sprintf("%.1f", delta),
+        significant = pvalue < 0.05,
+        pvalue = sprintf("%.9f", pvalue),
+        statistic = sprintf("%s=%s", names(statistic), statistic),
+        paired = FALSE
+      )
+      
+      tests <- rbind(tests, as.data.frame(t(test_row)))
+      
+      # Wildtype vs homozygotes
+      contrast = "wt vs hom"
+      test = wilcox.test(wt, hom, paired = FALSE)
+      pvalue = test$p.value
+      statistic = test$statistic
+      delta = mean(wt) - mean(hom)
+      
+      test_row = c(
+        contrast = contrast,
+        stock = stock,
+        zygosity = "-",
+        status = status,
+        value = value,
+        delta = sprintf("%.1f", delta),
+        significant = pvalue < 0.05,
+        pvalue = sprintf("%.9f", pvalue),
         statistic = sprintf("%s=%s", names(statistic), statistic),
         paired = FALSE
       )
@@ -522,7 +570,7 @@ for (stock in unique(mdlong$stock)) {
         value = value,
         delta = sprintf("%.1f", delta),
         significant = pvalue < 0.05,
-        pvalue = sprintf("%.6f", pvalue),
+        pvalue = sprintf("%.9f", pvalue),
         statistic = sprintf("%s=%s", names(statistic), statistic),
         paired = TRUE
       )
@@ -541,31 +589,54 @@ for (zygosity in c("heterozygote", "homozygote")) {
     # Note: prd excluded because CF formation is not prevented
     buck = mdlong[(mdlong$status == "tf_buck" & mdlong$stock != "prd" & mdlong$zygosity == zygosity), value]
     md = mdlong[(mdlong$status == "md_start" & mdlong$stock != "prd" & mdlong$zygosity == zygosity), value]
+    wt = mdlong[(mdlong$status == "md_start" & mdlong$stock == "wt" & mdlong$zygosity == "wildtype"), value]
     
+    # buck vs md
+    contrast = "buck vs md"
     test = wilcox.test(buck, md, paired = TRUE)
     pvalue = test$p.value
     statistic = test$statistic
     delta = mean(buck) - mean(md)
     
     test_row = c(
-      contrast = "buck vs md",
+      contrast = contrast,
       stock = "btd+eve",
       zygosity = zygosity,
       status = "-",
       value = value,
       delta = sprintf("%.1f", delta),
       significant = pvalue < 0.05,
-      pvalue = sprintf("%.6f", pvalue),
+      pvalue = sprintf("%.9f", pvalue),
       statistic = sprintf("%s=%s", names(statistic), statistic),
       paired = TRUE
     )
+    tests <- rbind(tests, as.data.frame(t(test_row)))
     
+    # wt vs md het or hom (combined)
+    contrast = sprintf("wt vs %s", substr(zygosity, 1, 3))
+    test = wilcox.test(wt, md, paired = FALSE)
+    pvalue = test$p.value
+    statistic = test$statistic
+    delta = mean(wt) - mean(md)
+    
+    test_row = c(
+      contrast = contrast,
+      stock = "btd+eve",
+      zygosity = zygosity,
+      status = "md_start",
+      value = value,
+      delta = sprintf("%.1f", delta),
+      significant = pvalue < 0.05,
+      pvalue = sprintf("%.9f", pvalue),
+      statistic = sprintf("%s=%s", names(statistic), statistic),
+      paired = FALSE
+    )
     tests <- rbind(tests, as.data.frame(t(test_row)))
   }
 }
 
 # Define factors for ordering
-tests$contrast = factor(tests$contrast, levels = c("het vs hom", "buck vs md"))
+tests$contrast = factor(tests$contrast, levels = c("het vs hom", "wt vs het", "wt vs hom", "buck vs md"))
 tests$stock = factor(tests$stock, levels = c("wt", "btd", "eve", "prd", "btd+eve"))
 tests$status = factor(tests$status, levels = c("md_start", "md_split", "-"))
 tests$value = factor(tests$value, levels = c("time", "gb_pct"))
